<resources>
    <string name="app_name">I I K E A</string>
    <string name="top_picks">TOP TRENDS</string>
    <string name="category">CATEGORIES</string>
    <string name="search">Searching button</string>
    <string name="furniture">FURNITURE</string>
    <string name="NO_ITEM_SEARCH">NO PRODUCT MATCH</string>

    // Category
    <string name="living_cat">LIVING</string>
    <string name="office_cat">OFFICE</string>
    <string name="outdoor_cat">OUTDOOR</string>
    <string name="light_cat">LIGHTING</string>

    // Furniture info
    <string name="furniture_price">PRICE</string>
    <string name="furniture_name">FURNITURE NAME</string>
    <string name="furniture_img">furniture_img</string>

    // FILTER
    <string name="furniture_price_max">MAX PRICE</string>
    <string name="furniture_category">CATEGORY / TAG</string>
    <string name="filter">filter_icon</string>

    // SORT
    <string name="sort_high">HIGHEST TO LOWEST</string>
    <string name="sort_low">LOWEST TO HIGHEST</string>
    <string name="sort">sort_icon</string>

    // Detail activity
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity">1</string>
    <string name="remove">remove_img</string>
    <string name="favourite">favourite icon</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="furniture_des">FURNITURE DESCRIPTIONS</string>
    <string name="related_item">RELATED ITEMS</string>

    // Saved activity
    <string name="favourite_item">FAVOURITE ITEMS</string>
    <string name="NO_item">NO SAVED PRODUCTS</string>
    <string name="NO_item_img">NO SAVED PRODUCTS_img</string>

    // Cart activity
    <string name="total_price">TOTAL COST:</string>
    <string name="total_price_no">$0.00</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="card">CARD NUMBER</string>
    <string name="ccv">CCV</string>
    <string name="shipping">SHIPPING ADDRESS</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="shopping_cart">SHOPPING CART</string>
    <string name="empty_cart">EMPTY CART</string>
    <string name="checkout">CHECK OUT</string>

    // Thank you activity
    <string name="thankyou">THANK YOU \nFOR \nSHOPPING AT \nI I K E A</string>
    <string name="check">check_icon</string>

    // Setting activity
    <string name="theme">THEME SWITCHER</string>
    <string name="company_intro">Welcome to I I K E A \n\nDiscover curated categories, trending picks, and personalised recommendations for your dream space.</string>
    <string name="app_version">Version: Beta 1.0\nBy: Joey &amp; Jay @ YouSee Soft\nsupport@youseesoft.com</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string-array name="furnitures">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
        <item>test4</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>