<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    style="@style/Base.Theme.IikeaApp.">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/furniture_price_max"
        android:textSize="20sp"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/max_price_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/furniture_category"
        android:textSize="20sp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_tag_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="false"
        app:chipSpacingHorizontal="10dp"
        app:chipSpacingVertical="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_lighting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/light_cat"
            app:checkedIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_outdoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outdoor_cat"
            android:checkable="true"
            android:checked="true"
            app:checkedIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office_cat"
            android:checkable="true"
            android:checked="true"
            app:checkedIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_chip_living"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/living_cat"
            android:checkable="true"
            android:checked="true"
            app:checkedIconVisible="true"/>

    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
