<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    style="@style/Base.Theme.IikeaApp.">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/furniture_price"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        />

    <RadioGroup
        android:id="@+id/sort_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_high_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_high" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_low_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_low" />
    </RadioGroup>
</LinearLayout>